fix: 增加清洗任务详情页